Update Gauges, correct keys
Added EGTMAX, used Rotax gearbox pressure address for gallery pressure

--- a/fixgw/config/Skyranger J2200.ini
+++ b/fixgw/config/Skyranger J2200.ini
@@ -1,24 +1,32 @@
 TACH1 = 0
 TACH1.Min = 0
 TACH1.Max = 3500
-TACH1.highWarn = 3250
-TACH1.highAlarm = 3300
+TACH1.highWarn = 3300
+TACH1.highAlarm = 3350
 
 OILP1 = 0
 OILP1.Min = 0
 OILP1.Max = 100
 OILP1.lowAlarm = 11
-OILP1.lowWarn = 15
+OILP1.lowWarn = 31
 OILP1.highWarn = 75
-OILP1.highAlarm = 80
+OILP1.highAlarm = 81
+
+OILG1 = 0
+OILG1.Min = 0
+OILG1.Max = 100
+OILG1.lowAlarm = 11
+OILG1.lowWarn = 31
+OILG1.highWarn = 75
+OILG1.highAlarm = 81
 
 # These are deg C
 OILT1 = 0
-OILT1.Min = 20
-OILT1.Max = 118
+OILT1.Min = 0
+OILT1.Max = 125
 OILT1.lowAlarm = 35
-OILT1.lowWarn = 40
-OILT1.highWarn = 100
+OILT1.lowWarn = 70
+OILT1.highWarn = 100	
 OILT1.highAlarm = 110
 
 CHT11 = 0
@@ -49,6 +57,37 @@ CHT14.lowWarn = 90
 CHT14.highWarn = 175
 CHT14.highAlarm = 190
 
+
+EGT11 = 0
+EGT11.Min = 550
+EGT11.Max = 800
+EGT11.lowWarn = 600
+EGT11.highWarn = 720
+EGT11.highAlarm = 740
+
+EGT12 = 0
+EGT12.Min = 550
+EGT12.Max = 800
+EGT12.lowWarn = 600
+EGT12.highWarn = 720
+EGT12.highAlarm = 740
+
+EGT13 = 0
+EGT13.Min = 550
+EGT13.Max = 800
+EGT13.lowWarn = 600
+EGT13.highWarn = 720
+EGT13.highAlarm = 740
+
+EGT14 = 0
+EGT14.Min = 550
+EGT14.Max = 800
+EGT14.lowWarn = 600
+EGT14.highWarn = 720
+EGT14.highAlarm = 740
+
+
+
 CHTMAX1 = 0
 CHTMAX1.Min = 40
 CHTMAX1.Max = 220
@@ -56,42 +95,26 @@ CHTMAX1.lowWarn = 90
 CHTMAX1.highWarn = 175
 CHTMAX1.highAlarm = 190
 
-
-FUELQ1 = 0
-FUELQ1.Min = 0
-FUELQ1.Max = 21
-FUELQ1.lowWarn = 5
-FUELQ1.lowAlarm = 1
-
-FUELQ2 = 0
-FUELQ2.Min = 0
-FUELQ2.Max = 21
-FUELQ2.lowWarn = 5
-FUELQ2.lowAlarm = 1
-
-FUELQT = 12.3
-FUELQT.Min = 0
-FUELQT.Max = 42
-FUELQT.lowWarn = 5
-FUELQT.lowAlarm = 3
-
-
-FUELF1 = 0
-FUELF1.Min = 0
-FUELF1.Max = 20
-
 FUELP1 = 0.0
-FUELP1.Min = 35
-FUELP1.Max = 50
-FUELP1.highWarn = 45
-FUELP1.highAlarm = 48
+FUELP1.Min = 0.0
+FUELP1.Max = 5.0
+FUELP1.lowAlarm = 0.5
+FUELP1.lowWarn = 1.0
+FUELP1.highWarn = 3.0
+FUELP1.highAlarm = 5.0
 
 IAS = 0
-IAS.Vs = 45.0
-IAS.Vs0 = 40
-IAS.Vno = 125
-IAS.Vne = 140
-IAS.Vfe = 70
+IAS.Vs = 37.0
+IAS.Vs0 = 35
+IAS.Vno = 72
+IAS.Vne = 108
+IAS.Vfe = 66
+IAS.Min = 0
+IAS.Max = 140
+IAS.Vx = 45
+IAS.Vy = 53
+
+# [Min,Max,V1,V2,Vne,Vfe,Vmc,Va,Vno,Vs,Vs0,Vx,Vy]
 
 AOA.Min = -3.0
 AOA.Max = 16.5
