--- a/fixgw/config/database.yaml
+++ b/fixgw/config/database.yaml
@@ -448,6 +448,16 @@ entries:
   tol: 2000
   aux: [Min,Max,lowWarn,highWarn,lowAlarm,highAlarm]
 
+- key: OILGe
+  description: Oil Pressure Gallery %e
+  type: float
+  min: 0.0
+  max: 200.0
+  units: psi
+  initial: 0.0
+  tol: 2000
+  aux: [Min,Max,lowWarn,highWarn,lowAlarm,highAlarm]
+
 - key: OILTe
   description: Oil Temperature Engine %e
   type: float
@@ -547,6 +557,16 @@ entries:
   initial: 0.0
   tol: 0
   aux: [Min,Max]
+
+- key: EGTMAXe
+  description: Exhaust Gas Temp Max Engine %e
+  type: float
+  min: 0.0
+  max: 1000.0
+  units: degC
+  initial: 0.0
+  tol: 0
+  aux: [Min,Max,lowWarn,highWarn,lowAlarm,highAlarm]
 
 - key: CHTec
   description: Cylinder Head Temp Engine %e, Cylinder %c
