Setting up PyEFIS

--- a/fixgw/config/Skyranger J2200.ini
+++ b/fixgw/config/Skyranger J2200.ini
@@ -86,6 +86,14 @@ EGT14.lowWarn = 600
 EGT14.highWarn = 720
 EGT14.highAlarm = 740
 
+EGTMAX1 = 0
+EGTMAX1.Min = 550
+EGTMAX1.Max = 800
+EGTMAX1.lowWarn = 600
+EGTMAX1.highWarn = 720
+EGTMAX1.highAlarm = 740
+
+
 
 
 CHTMAX1 = 0
