misc limit changes

--- a/fixgw/config/default.yaml
+++ b/fixgw/config/default.yaml
@@ -178,7 +178,7 @@ connections:
 
   # if you want several button copy this configuration with different setting like this [conn_button2] #GPIO.setup(P8_8, GPIO.IN)
   button1:
-    load: no
+    load: yes
     module: fixgw.plugins.bbb_button
     btnkey: BTN1
     btnpin: P8_8
@@ -186,7 +186,7 @@ connections:
 
   # if you want several button copy this configuration with different setting like this [conn_button2]
   button2:
-    load: no
+    load: yes
     module: fixgw.plugins.bbb_button
     btnkey: BTN2
     btnpin: P8_9
@@ -194,7 +194,7 @@ connections:
 
   # if you want several button copy this configuration with different setting like this [conn_button2]
   button3:
-    load: no
+    load: yes
     module: fixgw.plugins.bbb_button
     btnkey: BTN3
     btnpin: P8_10
@@ -202,7 +202,7 @@ connections:
 
   # if you want several button copy this configuration with different setting like this [conn_button2]
   button4:
-    load: no
+    load: yes
     module: fixgw.plugins.bbb_button
     btnkey: BTN4
     btnpin: P9_12
@@ -210,7 +210,7 @@ connections:
 
   # if you want several button copy this configuration with different setting like this [conn_button2]
   button5:
-    load: no
+    load: yes
     btnkey: BTN5
     module: fixgw.plugins.bbb_button
     btnpin: P9_25
@@ -218,7 +218,7 @@ connections:
 
   # if you want several button copy this configuration with different setting like this [conn_button2]
   button6:
-    load: no
+    load: yes
     module: fixgw.plugins.bbb_button
     btnkey: BTN6
     btnpin: P9_30
@@ -269,7 +269,7 @@ connections:
     Multiplier: 1.0
 
   grand_rapids_eis:
-    load: no
+    load: yes
     module: fixgw.plugins.grand_rapids_eis
     port: /dev/ttyO2
     model: 4000
